@@ -1,6 +1,6 @@
 --- #YAML:1.1
 name:                    Text-CSV_XS
-version:                 0.67
+version:                 0.68
 abstract:                Comma-Separated Values manipulation routines
 license:                 perl
 author:              
@@ -10,11 +10,13 @@ distribution_type:       module
 provides:
     Text::CSV_XS:
         file:            CSV_XS.pm
-        version:         0.67
+        version:         0.68
 requires:     
     perl:                5.005
     DynaLoader:          0
     IO::Handle:          0
+recommends:     
+    perl:                5.010001
 configure_requires:
     ExtUtils::MakeMaker: 0
 build_requires:
